--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/asifmahmoodjabbar/resourceBank#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "hbs": "^4.1.2",
     "mongoose": "^5.12.13"
   },
   "devDependencies": {
